fix: Center align bus icon on ScheduleCard

--- a/src/components/ScheduleCard/ScheduleCard.scss
+++ b/src/components/ScheduleCard/ScheduleCard.scss
@@ -20,6 +20,13 @@
         .side {
             display: flex;
             flex-direction: column;
+            min-width: 5rem;
+            align-items: flex-end;
+
+            // Second .side element
+            &:first-child {
+                align-items: flex-start;
+            }
 
             .time {
                 font-size: 1.75rem;
